--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,25 +60,69 @@ header {
   margin-top: 10px;
 }
 
+.ly_jumbotoron {
+  background-size: 120%;
+  background-repeat: no-repeat;
+  background-position-x: left;
+  background-position-y: center;
+  width:100%;
+  height: 600px;
+  position: relative;
+}
+
+.ly_jumbotoron_inner {
+  background-color: yellow;
+  padding-top: 30px;
+  padding-bottom:30px;
+  padding-left:2%;
+  padding-right: 2%;
+  opacity: 0.65;
+  position: absolute;
+  top:50%;
+  transform: translateY(-80%);
+  width:40%;
+}
+.ly_jumbotoron_inner_title {
+  color:black;
+  font-size:2em;
+  font-weight: 800;
+  border-bottom: 2px solid black;
+}
+
+
+.ly_jumbotoron_inner_cont {
+  padding-top: 5px;
+  font-size:1em;
+  font-weight: 600;
+}
+
 /* 全体共通のリンク部分のCSS */
 
 .ly_subHeader {
   background-color: rgb(228, 225, 225);
   padding-top:10px;
-  margin-top:10px;
 }
 .loginInfo {
   font-size: 2em;
   background-color: black;
-  color:yellow;
-  width:600px;
+  color:rgb(240, 240, 144);
+  width:60%;
   margin-top: 20px;
-  margin-left: 10%;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-left: 38%;
+  padding-top: 20px;
+  padding-bottom: 20px;
   text-align: center;
   border-radius: .5em;
-  opacity: 0.8;
+  opacity: 0.7;
+}
+.loginInfo > a {
+  display: inline-block;
+}
+.loginInfo > a:hover {
+  text-decoration-color: rgb(247, 48, 247);
+}
+.loginInfo > a:hover > span {
+  color:rgb(247, 48, 247);
 }
 
 .ly_ancor {
@@ -98,28 +142,36 @@ header {
 .ly_ancor li {
   margin-top:15px;
   margin-bottom: 10px;
-  padding:.3em 1em;
   display:1;
   font-size: 3em;
   text-align: center;
-  width:20%;
+  width:25%;
   min-width: 5em;
-  background-color: rgb(217, 247, 177);
   border-right: 2px dashed white;
   transition: .5s;
+  cursor: pointer;
 }
 .ly_ancor li > a {
+  display: inline-block;
   text-decoration: none;
   transition: .5s;
+  background-color: rgb(252, 252, 75);
+  min-width: 5em;
+  margin-left:0px;
+  padding:.3em 1em;
+}
+.ly_ancor li > a > span {
+  transition: .1s;
 }
 .ly_ancor li:last-child {
   border-right:none
 }
-.ly_ancor li:hover {
-  background-color: rgb(253, 211, 253);
-}
 .ly_ancor li:hover > a {
+  background-color:yellow;
+}
+.ly_ancor li:hover > a > span {
   color:blue;
+  border-bottom: blue solid 3px;
 }
 .el_listConuter {
   font-size: 2em;
@@ -182,23 +234,23 @@ header {
   margin-right: .5%;
   padding-bottom:1.5rem;
   border:black 1px solid;
-  height:570px;
+  height:600px;
 }
 
 .bl_listCard:nth-child(even) {
-  float:left;
+  float:right;
 }
 
 .bl_listCard:nth-child(odd) {
-  float:right;
+  float:left;
 }
 
 
 .bl_listCard_img {
-  width:96%;
-  height:150px;
-  margin-top:2%;
-  margin-left:2%;
+  width:100%;
+  height:160px;
+  margin-top:0%;
+  margin-left:0%;
 }
 
 .bl_listCard_title {
@@ -211,8 +263,10 @@ header {
   margin-left:0%;
   margin-top:10px;
   margin-bottom: 15px;
-  padding-top:5px;
-  padding-bottom: 5px;
+  padding-top:10px;
+  padding-bottom: 10px;
+  padding-left:15px;
+  padding-right:15px;
 }
 .bl_listCard_updateAt,.bl_listCard_insertAt,.bl_listCard_place {
   margin-bottom:5px;
@@ -232,6 +286,8 @@ header {
   margin-left:2%;
   padding-top:10px;
   padding-bottom: 10px;
+  cursor:pointer;
+  border:solid 2px transparent;
 }
 .bl_listCard_buttons_item:nth-child(3){
    margin-bottom: 20px;
@@ -243,7 +299,7 @@ header {
 
 .bl_listCard_buttons_item:hover {
   color:blue;
-  background-color: black;
+  border-color:blue;
 }
 .bl_listCard_buttons_item:hover > a {
   color:blue;
@@ -256,11 +312,13 @@ header {
 
 .el_confirmYesButton {
   display: inline-block;
-  background-color: blue;
+  background-color: rgb(25, 150, 252);
   margin-left: 3%;
   margin-right: 3%;
   width:44%;
   margin-top:10px;
+  cursor:pointer;
+  border:dashed 2px transparent;
 }
 
 .el_confirmYesButton > a {
@@ -269,14 +327,30 @@ header {
   text-decoration: none;
 }
 
+.el_confirmYesButton:hover {
+  background-color: blue;
+  border-color: yellow;
+}
+.el_confirmYesButton:hover > a {
+  color:yellow;
+}
+
 .el_confirmNoButton {
   display: inline-block;
-  background-color: red;
+  background-color: rgb(252, 52, 192);
   margin-left: 3%;
   margin-right: 3%;
   width:44%;
   color:white;
   font-weight: 600;
+  cursor:pointer;
+  border:dashed 2px transparent;
+}
+
+.el_confirmNoButton:hover {
+  background-color: red;
+  color:yellow;
+  border-color: yellow;
 }
 
 .ly_main_contents > .bl_media_header{
@@ -312,8 +386,8 @@ header {
   padding-bottom:15px;
 }
 .bl_listDisplay_img {
-  width:96%;
-  margin-left:2%;
+  width:99%;
+  margin-left:0.5%;
   margin-top:0px;
   margin-bottom: 10px;
 }
@@ -409,10 +483,11 @@ header {
   font-size:2rem;
   background-color: orange;
   padding:.2em 2em;
-  width:30%;
-  margin-left: 35%;
+  width:40%;
+  margin-left: 30%;
   margin-bottom:30px;
   pointer-events: auto;
+  cursor:pointer;
 }
 .bl_listForm_radio {
   display: inline-block;
@@ -461,6 +536,9 @@ header {
   margin-left: 37%;
   margin-bottom:60px;
   border-radius: 10px;
+  cursor:pointer;
+  padding-top:10px;
+  padding-bottom:10px;
 }
 
 .el_diarySubItemButton.el_diarySubItemButton__add {
@@ -473,36 +551,34 @@ header {
 
 /* diary_edit.pug */
 .bl_listForm_radio__shareDiary {
-  margin-bottom: 100px;
+  margin-bottom: 20px;
 }
 
 /* users.pug */
 
-.bl_listMedia {
+.bl_bgImgCard {
   width: 96%;
   margin-left:2%;
   margin-bottom: 10px;
   margin-top:20px;
+  height:250px;
   border:solid black 1px;
-  height:220px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color:rgba(255,255,255,0.6);
+  background-blend-mode:lighten;
+  background-position: center center;
 }
 
-.bl_listMedia_img {
-  height: 200px;
-  width:50%;
-  float: left;
-  margin-top: 10px;
-}
-
-.bl_listMadia_body {
+.bl_bgImgCard_body {
   margin-top: 10px;
   height: 120px;
   width:100%;
 }
 
-.bl_listMedia_body_title {
-  font-size:1.5em;
-  font-weight: 700;
+.bl_bgImgCard_body_title {
+  font-size:1.7em;
+  font-weight: 800;
   margin-top: 0;
   margin-bottom: 10px;
   margin-left: 4%;
@@ -512,40 +588,61 @@ header {
   width:94%;
 }
 
-.bl_listMedia_body_tripDate {
-  font-size:1em;
+.bl_bgImgCard_body_tripDate {
+  font-size:1.2em;
   font-weight: 700;
   text-align: center;
 }
 
-.bl_listMedia_buttons_item {
-   width:13%;
+.bl_bgImgCard_body_item {
+  font-size:1.2em;
+  font-weight: 700;
+  text-align: center;
+}
+
+.bl_bgImgCard_body_buttons_item {
+   width:25%;
    margin-top:5px;
    margin-left:2%;
    background-color: orange;
+   font-size: 1em;
    font-weight: 600;
+   cursor:pointer;
+   border:solid 2px transparent;
 }
 
-.bl_listMedia_body_editButton > a {
+.bl_bgImgCard_body_buttons_item:hover {
+  border-color: blue;
+  color:blue;
+}
+.bl_bgImgCard_body_buttons_item:hover > a {
+  color:blue;
+}
+
+.bl_bgImgCard_body_showButton {
+  width:42%;
+}
+
+.bl_bgImgCard_body_editButton > a {
   color:black;
   text-decoration: none;
 }
 
-.bl_listMedia_body_deleteButton_confirm {
+.bl_bgImgCard_body_deleteButton_confirm {
   margin-top:10px;
 }
-.bl_listMedia_body_deleteButton_confirm > div {
+.bl_bgImgCard_body_deleteButton_confirm > div {
   text-align: center;
   font-weight: 600;
 }
-.el_confirmYesButton__listMedia {
+.el_confirmYesButton__bgImgCard {
   margin-left: 1%;
   margin-right: 1%;
   width:23%;
   font-weight: 600;
 }
 
-.el_confirmNoButton__listMedia {
+.el_confirmNoButton__bgImgCard {
   margin-left: 1%;
   margin-right: 1%;
   width:23%;
@@ -593,3 +690,287 @@ header {
   padding-left:3%;
   padding-right:3%;
 }
+
+/* share.pug のメインコンテンツの実装 */
+
+.bl_bgImgCard__share {
+  height:320px;
+}
+
+.bl_bgImgCard_body_showButton__share {
+  background-color:rgb(160, 241, 10);
+  width:50%;
+  margin-left: 25%;
+  font-size:17px;
+}
+.bl_bgImgCard_body_showButton__share:hover {
+  border-color: rgb(25, 150, 252);
+}
+
+.bl_bgImgCard_body_item__share {
+   font-size:18px;
+   font-weight: 900;
+}
+
+.bl_listCard_insertAt__share {
+  margin-bottom: 5px;
+}
+
+.bl_listCard_showButton__share {
+  background-color:rgb(64, 241, 10);
+  width:50%;
+  margin-left: 25%;
+  font-size:17px;
+}
+
+.bl_listCard_showButton__share:hover {
+  border-color: rgb(25, 150, 252);
+  
+}
+
+
+
+/* list.pug リストのカードのメディアクエリー*/
+
+@media screen and (max-width: 1190px) {
+  .bl_listCard {
+    width:98%;
+    height:670px;
+    float:none;
+  }
+  .bl_listCard_img {
+    height: 240px;
+  }
+  .bl_listCard_updateAt,.bl_listCard_insertAt,.bl_listCard_place {
+    font-size:1.3em;
+  }
+  .bl_listCard_buttons_item {
+    width:30%;
+  }
+  .bl_listCard_buttons_item.bl_bgImgCard_body_showButton__share{
+    width:50%;
+  }
+}
+@media screen and (max-width: 600px){
+  .bl_listCard {
+    width:98%;
+    height:600px;
+    float:none;
+  }
+  .bl_listCard_img {
+    height: 220px;
+  }
+}
+
+/* users.pug 日記のメディアのメディアクエリー */
+
+@media screen and (max-width:1090px){
+  .bl_listMedia {
+    width: 96%;
+    height:540px;
+    margin-top:20px;
+  }
+  
+  .bl_listMedia_img {
+    height: auto;
+    max-height:280px;
+    width:100%;
+    float: none;
+    margin-top: 0;
+  }
+  
+  .bl_listMadia_body {
+    margin-top: 10px;
+    height: 120px;
+    width:100%;
+  }
+  
+  .bl_listMedia_body_title {
+    font-size:1.8em;
+    widows: 94%;
+    margin-left:3%;
+  }
+  
+  .bl_listMedia_body_tripDate {
+    font-size:1.5em;
+  }
+  
+  .bl_listMedia_buttons_item {
+     width:25%;
+     margin-left:2%;
+     font-size: 1.3em;
+     font-weight: 600;
+  }
+  .bl_listMedia_body_showButton {
+    width:42%;
+  }
+  .bl_listMedia_body_deleteButton_confirm {
+    font-size:1.2em;
+    margin-top:20px;
+  }
+  .el_confirmYesButton__listMedia, .el_confirmNoButton__listMedia {
+    width:46%;
+    font-size:.8em;
+  }
+}
+
+
+
+/* 全体　メインコンテンツのメディアクエリー */
+@media screen and (max-width:780px) {
+  .ly_mainArea {
+    display: block;
+  }
+  .ly_mainArea > .bl_mainContent {
+    display: inline-block;
+    width:96%;
+    flex-wrap: wrap;
+  }
+  .bl_mainContent.bl_mainContent__right {
+    margin-top:60px;
+  }
+}
+
+
+/* 全体　ジャンボトロンのメディアクエリー */
+@media screen and (max-width:1004px) {
+  .ly_jumbotoron {
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+  }
+  .ly_jumbotoron_inner {
+    width:45%;
+  }
+}
+
+@media screen and (max-width:780px) {
+  .ly_jumbotoron {
+    height: 450px;
+  }
+}
+
+/* 全体　ログイン情報のメディアクエリー */
+@media screen and (max-width:830px) {
+  .loginInfo {
+    padding-left:2%;
+    padding-right:2%;
+    width:90%;
+    margin-left:3%;
+  }
+}
+
+/* 日記フォームの　日記追加ボタン,取り消しボタンのメディアクエリー */
+@media screen and (max-width:1100px) {
+  .el_diarySubItemButton {
+    width:40%;
+    margin-left:30%;
+  }
+  .el_submitButton {
+    width:60%;
+    margin-left:20%;
+  }
+}
+
+/* 共通　フォームのページのメディアクエリー */
+@media screen and (max-width:780px) {
+  .ly_listForm {
+    font-size: 1.5rem;
+    margin-top:10px;
+    padding-top:30px;
+    padding-bottom:30px;
+  }
+  .bl_listFrom {
+    margin-left: 6%;
+    padding-top:1.5em;
+    width:86%;
+    padding-left:4%;
+    background-color: whitesmoke;
+    border-radius: 30px;
+  }
+  .bl_listForm_title {
+    font-size:2rem;
+    margin-bottom:60px;
+  }
+  .el_textForm {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+  }
+  .el_radioButton {
+    width:2rem;
+    height:1.4rem;
+    margin-left: 10px;
+  }
+  
+  .el_radioAns {
+    margin-right: 1em;
+  }
+  .bl_listForm_done {
+    padding-bottom:30px;
+  }
+  .el_textarea {
+    margin-bottom: 20px;
+    font-size:1.3rem;
+    width:94%;
+  }
+  
+  .el_submitButton {
+    font-size:2rem;
+    width:80%;
+    margin-top:10px;
+    margin-left:10%;
+    margin-bottom:40px;
+  }
+  .bl_listForm_radio {
+    margin-bottom:20px;
+  }
+  .bl_listForm_todo {
+    margin-bottom:20px;
+  }
+  .el_textForm__subTitle {
+    width:90%;
+  }
+  .el_textForm__date {
+    width:14rem;
+  }
+  
+  /* 日記フォームのCSSデザイン */
+  
+  .bl_listForm_visitPlace {
+    display:inline-block;
+    margin-bottom:30px;
+    margin-top:30px;
+  }
+  .bl_listForm_visitTimes {
+    margin-bottom:20px;
+  }
+  
+  .bl_listForm_weather {
+    margin-bottom:20px;
+  }
+  .el_selectForm {
+    font-size: 1.5rem;
+  }
+  
+  .el_timeForm {
+    font-size: 1.5rem;
+  }
+
+  .bl_listForm_pict {
+    margin-bottom:20px;
+  }
+  
+  .el_diarySubItemButton {
+    width:70%;
+    margin-left: 15%;
+    margin-bottom:40px;
+  }
+
+  /* 日記編集フォームのCSS */
+
+  .bl_listForm_radio__shareDiary {
+    margin-right:10px;
+  }
+}
+
+
