--- a/views/diary_edit.pug
+++ b/views/diary_edit.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
    if user 
-    div.ly_subHeader
+    div.ly_subHeader.ly_subHeader_form
      div.loginInfo 
        div 現在 #{user.username} でログイン中です
        a(href="/logout")
@@ -38,6 +38,9 @@ block content
            option 晴れ
            option 雨
            option 曇り
+          br
+          span.bl_listForm_pict トップ画像 :　
+            input(type="file" name='topImg' class="el_fileInput")
           br
           span.bl_listForm_radio.bl_listForm_radio__shareDiary この日記を公開する : 
           div.bl_listForm_radio_inner__shareDiary
