--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="/javascripts/jquery-3.5.1.min.js")
+    script(src="/javascripts/main.js")
   body
-    header header
+    header 
+      span আপনার ট্রিপ করা
     block content
     script(src="/javascripts/bundle.js")
