--- a/views/share.pug
+++ b/views/share.pug
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-  div(style="background-image: url('../images/DSC_3148のコピー2.jpg')").ly_jumbotoron
-   div.ly_jumbotoron_inner
-    div.ly_jumbotoron_inner_title 予定作成機能
-    br
-    div.ly_jumbotoron_inner_cont 予定作成機能により、いつか行ってみたいと思っているところを整理することができます
+  div(style="background-image: url('../images/11147.jpg')").ly_jumbotoron
+     div.ly_jumbotoron_inner.ly_jumbotoron_inner_share
+      div.ly_jumbotoron_inner_title 日記公開機能
+      br
+      div.ly_jumbotoron_inner_cont 作成した日記を自分だけではなく、他のユーザーともシェアすることができます。日記の公開は作成した日記の編集ページから行うことができます。
   if user 
     div.ly_subHeader
       div.loginInfo 
@@ -30,10 +30,10 @@ block content
        div.bl_mainContent
          div.bl_mainContent_title 公開日記一覧
          each shareTitle in shareTitles
-            div(style="background-image: url('../images/DSC_3148のコピー2.jpg')").bl_bgImgCard.bl_bgImgCard__share
+            div(style="background-image: url(" + `../images/upload_diary_topImg/${shareTitle.topImg}` + ")").bl_bgImgCard.bl_bgImgCard__share
              div.bl_bgImgCard_body
               h4.bl_bgImgCard_body_title #{shareTitle.titleName}
-              p.bl_bgImgCard_body_item.bl_bgImgCard_body_item__share 投稿者：#{shareTitle.postedBy}
+              p.bl_bgImgCard_body_item.bl_bgImgCard_body_item__share 投稿者：#{shareTitle.contributor}
               p.bl_bgImgCard_body_item.bl_bgImgCard_body_item__share 旅行日：#{shareTitle.date}
               p.bl_bgImgCard_body_item.bl_bgImgCard_body_item__share 公開日：#{shareTitle.insertAt}
               div.bl_bgImgCard_body_buttons
@@ -42,7 +42,7 @@ block content
          div.bl_mainContent_title 詳細表示欄
          div.bl_listDisplay.hidden_display
            h3.shared-diary-title.bl_listDisplay_title
-           img(src=`./images/DSC_3148のコピー2.jpg` class="bl_listDisplay_img bl_listDisplay_img__diary hidden_display")
+           img(src=`` class="bl_listDisplay_img bl_listDisplay_img__diary hidden_display")
            p.shared-diary-postedBy.bl_listDisplay_items
            p.shared-diary-date.bl_listDisplay_items
            p.shared-diary-updateAt.bl_listDisplay_updateAt.bl_listDisplay_items
@@ -55,3 +55,6 @@ block content
             p(class=`shared-sub-times${i+1} bl_listDisplay_subTimes__diary bl_listDisplay_items hidden_display`)
             p(class=`shared-sub-location${i+1} bl_listDisplay_subLocation__diary bl_listDisplay_items hidden_display`)
             p(class=`shared-sub-impression${i+1} bl_listDisplay_subImpression__diary hidden_display` style="white-space:pre-wrap;")
+  div.ly_footer
+    div.ly_footer_inner_top トップへ
+    div.ly_footer_inner_contentTop 日記トップへ
