Herokuの環境変数を利用できるように修正

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,6 @@ html
     script(src="/javascripts/main.js")
   body
     header 
-      span আপনার ট্রিপ করা
+      span 旅行調整くん
     block content
     script(src="/javascripts/bundle.js")
