--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
     script(src="/javascripts/main.js")
   body
     header 
-      span 旅行調整くん
+      span.bl_header_firstSpan তাবি
+      span マイタビメイキング
     block content
     script(src="/javascripts/bundle.js")
