--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,6 @@ html
   body
     header 
       span.bl_header_firstSpan তাবি
-      span マイタビメイキング
+      span TRIPARRANGER
     block content
     script(src="/javascripts/bundle.js")
