--- a/views/list.pug
+++ b/views/list.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div(style="background-image: url('../images/DSC_3148のコピー2.jpg')").ly_jumbotoron
+  div(style="background-image: url('../images/DSC_3148のコピー2.png')").ly_jumbotoron
    div.ly_jumbotoron_inner
     div.ly_jumbotoron_inner_title 予定作成機能
     br
