--- a/views/share.pug
+++ b/views/share.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div(style="background-image: url('../images/11147.jpg')").ly_jumbotoron
+  div(style="background-image: url('../images/11147.png')").ly_jumbotoron
      div.ly_jumbotoron_inner.ly_jumbotoron_inner_share
       div.ly_jumbotoron_inner_title 日記公開機能
       br
