--- a/views/users.pug
+++ b/views/users.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div(style="background-image: url('../images/11148.jpg')").ly_jumbotoron.ly_jumbotoron_diaryCreate
+  div(style="background-image: url('../images/11148.png')").ly_jumbotoron.ly_jumbotoron_diaryCreate
     div.ly_jumbotoron_inner.ly_jumbotoron_inner_diaryCreate
       div.ly_jumbotoron_inner_title 日記作成機能
       br
